# trading-system-app

./: .dockerignore  .env.example  .gitignore  Contexto_Auditoria_Siguiente_Chat.md  Fase_3c_Auditoria_Codigo_Squawks_ML.md  LICENSE  README-backend.md  README.md  debug_news.py  docker-compose.dev.yml  fase3c-parte4-completo.patch  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
apps/api/: main.py
apps/dashboard/: app.py
apps/ingestion_historical/: downloader.py  finbert.py  ingestion.py  main.py  news_alpaca.py  silver.py  tensor.py
apps/ingestion_live/: alpaca_news.py  alpaca_prices.py  finbert_rt.py  main.py  silver_rt.py
apps/ml_sandbox/: backtest.py  config.py  evaluate.py  pipeline.py  train.py
apps/ml_sandbox/data/: __init__.py  loader.py  splitter.py
apps/trading_engine/: alpaca_trader.py  db.py  main.py  reconciliation.py  trading_engine_main.py
config/backtests/: aapl_backtest_v1.yaml
config/experiments/: aapl_gru_1m_v2.yaml  aapl_lgbm_1m_v2.yaml  aapl_lstm_1m_v2.yaml  aapl_rf_1m_v2.yaml  aapl_transformer_1m_v2.yaml  aapl_xgboost_1m_v2.yaml
config/ingestion/: tickers.yaml
config/live/: ensemble.yaml  trading.yaml
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.engine  Dockerfile.ingestion
docs/: contexto_squawks_ml.md
scripts/: README.md  migration_fase4_auth.sql  migration_fase5_squawks.sql  post_fix_audit.md  rotate_credentials.md  schema_fixes.sql  verify_system.py
services/api/: main.py
services/api/auth/: dependencies.py  security.py
services/api/routers/: auth.py  backtest.py  health.py  live.py  models.py  signals.py  squawks.py  tickers.py  trading.py  training.py
services/decision/: main.py
services/features/: main.py
services/inference/: main.py
services/ingestion/: main.py
services/squawk/: main.py
shared/: __init__.py  config.py  db.py  guardrails.py  indicators.py  inference.py  squawk_generator.py  symbols.py  tts.py
shared/models/: __init__.py  base.py  registry.py
shared/models/pytorch_models/: __init__.py  dataset.py  gru_model.py  lstm_model.py  transformer_model.py
shared/models/sklearn_models/: __init__.py  lightgbm_model.py  random_forest_model.py  xgboost_model.py
shared/signals/: __init__.py  base.py
shared/signals/rules/: atr_contraction.py  atr_expansion.py  bollinger_squeeze.py  bollinger_touch_lower.py  bollinger_touch_upper.py  death_cross.py  ema_bounce.py  ema_break.py  golden_cross.py  macd_cross_down.py  macd_cross_up.py  macd_zero_cross.py  news_volume_spike.py  price_spike.py  rsi_divergence.py  rsi_overbought.py  rsi_oversold.py  sentiment_extreme_negative.py  sentiment_extreme_positive.py  sentiment_flip.py  triple_ema_align.py  volume_dry_up.py  volume_spike.py  vwap_cross_down.py  vwap_cross_up.py
shared/utils/: logging.py  time.py
tests/: conftest.py  test_all_services.py
tests/shared/: test_indicators.py  test_models.py  test_parity.py
workers/backtest/: main.py
workers/training/: main.py
